--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.0-alpha3",
     "install": "^0.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
